# zen

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: update-homebrew.yml
src/: config.rs  core.rs  lib.rs  main.rs  utils.rs
src/commands/: add.rs  browse.rs  list.rs  mod.rs  remove.rs  run.rs
