[package]
name = "zen"
version = "0.1.0"
edition = "2025"
description = "A simple command launcher and alias manager"
authors = ["Maaz Siddiqi <maazali22@gmail.com>"]
license = "MIT"
repository = "https://github.com/MaazSiddiqi/zen"
homepage = "https://github.com/MaazSiddiqi/zen"
keywords = ["cli", "alias", "launcher", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
